# githooks-test

./: .gitignore  README.md
.project/hooks/: pre-push
.project/scripts/: pyproject.toml
.project/scripts/notebooks/: Untitled.ipynb
