[tool.poetry]
name = "githooks"
version = "0.1.0"
description = ""
authors = ["dschu <m.d.schuett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dulwich = "^0.21.5"
urllib3 = "<2.0.0"
ruamel-yaml = "^0.17.26"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
